# market-data-aggregator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
ci/: Jenkinsfile
docker/: Dockerfile  docker-compose.yml
include/: crc32.hpp  feed_ingestion_pipeline.hpp  lock_free_queue.hpp  market_data_aggregator.hpp  tick.hpp
python/: feed_simulator.py  market_monitor.py
src/: crc32.cpp  feed_ingestion_pipeline.cpp  main.cpp  market_data_aggregator.cpp  tick.cpp
tests/: test_feed_ingestion_pipeline.cpp  test_lock_free_queue.cpp  test_tick.cpp
tools/: feed_simulator.cpp  market_monitor.cpp
